deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utools-site
  namespace: utools-site
