deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utools-site
  namespace: utools-site
spec:
  selector:
    app: utools-site
  ports:
    - port: 80
      targetPort: 1313
  type: ClusterIP
