deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utools-site
  namespace: utools-site
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
    - host: utools.site
      http:
        paths:
          - backend:
              service:
                name: utools-site
                port:
                  number: 80
            path: /
            pathType: Prefix
